--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EBAC Tech Talks</title>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
@@ -39,6 +40,57 @@
             </div>
         </div>
     </header>
+
+    <section class="event event--frontend">
+        <div class="container" data-aos="fade-right">
+            <div class="event__details">
+                <h2 class="event__details__title">Front-end</h2>
+                <p class="event__details__description">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid maiores vel alias obcaecati quidem eaque consectetur non distinctio, molestiae labore reprehenderit? Amet culpa facere iure autem atque unde quos sequi.
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur possimus nisi incidunt rem, neque odio rerum sit similique, enim ipsa debitis culpa dolorum, quidem autem tempora sed. Doloribus, eum eveniet!
+                </p>
+            </div>
+            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+        </div>
+    </section>
+    <section class="event event--ui-ux event--image-left">
+        <div class="container" data-aos="fade-left">
+            <div class="event__details">
+                <h2 class="event__details__title">UI/UX</h2>
+                <p class="event__details__description">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid maiores vel alias obcaecati quidem eaque consectetur non distinctio, molestiae labore reprehenderit? Amet culpa facere iure autem atque unde quos sequi.
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. At, nulla consectetur vitae maiores voluptatibus laboriosam dicta quae incidunt facilis corporis praesentium exercitationem provident corrupti. Laboriosam a incidunt quod inventore nesciunt.
+                </p>
+            </div>
+            <img class="event__image" src="./images/ui-ux.png" alt="UI/UX">
+        </div>
+    </section>
+    <section class="event event--data-science">
+        <div class="container" data-aos="fade-right">
+            <div class="event__details">
+                <h2 class="event__details__title">Data Science</h2>
+                <p class="event__details__description">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid maiores vel alias obcaecati quidem eaque consectetur non distinctio, molestiae labore reprehenderit? Amet culpa facere iure autem atque unde quos sequi.
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit beatae voluptas vitae debitis eos, quo totam numquam. Id sunt minus labore eos rerum, vitae accusamus repellendus architecto cum, quibusdam mollitia.
+                </p>
+            </div>
+            <img class="event__image" src="./images/data.png" alt="Data Science">
+        </div>
+    </section>
+    <section class="event event--backend event--image-left">
+        <div class="container" data-aos="fade-left"> 
+            <div class="event__details">
+                <h2 class="event__details__title">Back-end</h2>
+                <p class="event__details__description">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid maiores vel alias obcaecati quidem eaque consectetur non distinctio, molestiae labore reprehenderit? Amet culpa facere iure autem atque unde quos sequi.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis iste laborum reprehenderit tempore quasi distinctio delectus repellat deleniti nobis quisquam, voluptate amet quam, cumque exercitationem! Veniam sapiente accusamus temporibus unde?
+                </p>
+            </div>
+            <img class="event__image" src="./images/backend.png" alt="Back-end">
+        </div>
+    </section>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="scripts/main.js"></script>
-</body> 
+</body>
 </html>
